--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.61.0",
     "vite": "^4.2.0"
   }
 }
